tests/compile_fail/detector_pixel_return.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/detector_pixel_return.rs:8:16
   |
8  |         return pixels.to_vec();
   |                ^^^^^^^^^^^^^^^ expected `DetectionResult`, found `Vec<u8>`
